--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+* {
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
+}
+
+body {
+  padding: 20px 80px;
 }
 
 .App-logo {
@@ -35,4 +42,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
