--- a/src/component/custom-button/custom-buttom.styles.scss
+++ b/src/component/custom-button/custom-buttom.styles.scss
@@ -14,6 +14,8 @@
   border: none;
   cursor: pointer;
   white-space: nowrap;
+  display: flex;
+  justify-content: center;
 
 
   &:hover {
@@ -28,6 +30,18 @@
 
     &:hover {
       background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
       border: none;
     }
   }
