--- a/src/component/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/component/cart-dropdown/cart-dropdown.styles.scss
@@ -10,12 +10,21 @@
     top: 90px;
     right: 40px;
     z-index: 5;
+    
+    ::-webkit-scrollbar {
+        width: 0;  /* Remove scrollbar space */
+    }
   
+    .empty-message {
+      font-size: 18px;
+      margin: 50px auto;
+    }
+
     .cart-items {
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow-y: scroll;
     }
   
     button {
